--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,35 @@
 ---
-title: "About"
+title: "Shengrui Zhou"
 image: profile.jpg
+
 about:
-  template: jolla
+  template: trestles
+  image-width: 20em
+  image-shape: rectangle
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+      href: "https://twitter.com"
     - icon: github
-      text: Github
-      href: https://github.com
-
+      text: GitHub
+      href: "https://github.com/liyuanaa/"
+    - icon: youtube
+      text: YouTube
+      href: "https://www.youtube.com/"
+    - icon: instagram
+      text: Instagram
+      href: "https://www.instagram.com/"
+    - icon: mailbox
+      text: Gmail
+      href: "https://mail.google.com/"
 ---
 
-About this blog
+# 简介
+
+吉林大学经济学院金融学专业本科三年级学生。
+
+## 关注领域
+数字经济治理、公共政策、数字创新、数字化转型
+
+## 兴趣技能
+Python、R、Stata
