--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "demo"
 listing:
-  contents: posts
+  contents: "posts"
   sort: "date desc"
   type: default
   categories: true
@@ -10,5 +10,3 @@ listing:
 page-layout: full
 title-block-banner: true
 ---
-
-
